css/styles.css
:root {
    --main-bg-color: #3c2d82;
}

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    padding: 2rem;
    font-family: -apple-system, BlinkMacSystemFont, 'Helvetica', 'Arial',
        sans-serif;
    font-size: 1.75rem;
    line-height: 1.3;
    color: #222;
    letter-spacing: 0.01em;
}

header,
main,
footer {
    margin: 0 auto 4rem;
    max-width: 40rem;
}

a {
    color: var(--main-bg-color);
    font-weight: 600;
    text-decoration: none;
}

p > img {
    vertical-align: middle;
}

input,
button {
    margin: 0.25rem;
    font-family: sans-serif;
    font-size: inherit;
    line-height: 1;
    border-radius: 0.25rem;
}

input {
    padding: 0.5rem;
}

button {
    padding: 0.75rem 1rem;
    color: #fff;
    background-color: var(--main-bg-color);
    border: 0;
    cursor: pointer;
}

header h1 {
    margin: 0 0 2rem;
    font-weight: 400;
    line-height: 1;
}

header h2 {
    font-weight: 400;
    line-height: 1;
}

header > img {
    display: block;
    margin: 2rem 0;
}

header p b {
    font-weight: 700;
}

header p a {
    padding: 0 0.25rem;
    color: #fff;
    background-color: var(--main-bg-color);
}

section {
    margin: 2rem 0;
    overflow: hidden;
    border-radius: 0.5rem;
}

figure img {
    display: block;
    width: 100%;
    height: auto;
}

figure figcaption {
    padding: 0.75rem 1rem;
    font-size: 1.4rem;
    font-weight: 400;
    color: #fff;
    background-color: var(--main-bg-color);
}

.video-wrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}

.video-wrapper video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

